<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="11dp"
        app:cardCornerRadius="5dp"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:layout_weight="0"
                android:text="@string/photo" />

            <ImageView
                android:id="@+id/imageView_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="11dp"
                android:layout_weight="0"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <TextView
                android:id="@+id/textView_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:layout_weight="0"
                android:text="@string/barcode" />

            <ImageView
                android:id="@+id/imageView_barcode"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="11dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/none_iamge" />

            <TextView
                android:id="@+id/textView_date_recive_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:layout_weight="0"
                android:text="@string/date_recive" />

            <Button
                android:id="@+id/button_confirm_recive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="11dp"
                android:layout_weight="0"
                android:text="@string/confirm_reciv" />

            <Button
                android:id="@+id/button_chanel_added_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="11dp"
                android:text="@string/chanel_added_product"
                android:layout_weight="0" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_msg_failed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:text="@string/error_processing_photo"
                android:textSize="27sp" />

            <Button
                android:id="@+id/button_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="11dp"
                android:text="@android:string/yes" />

            <Button
                android:id="@+id/button_no"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="11dp"
                android:text="@android:string/no" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>