<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="11dp"
                        android:text="@string/сourier"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView_staus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:layout_marginBottom="11dp"
                        android:layout_weight="1"
                        android:text="@string/сourier_status"
                        android:textSize="17sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_order_name_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="11dp"
                        android:text="@string/order"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView_order_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:layout_marginBottom="11dp"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView_order_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginEnd="11dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/content"
                        android:textSize="17sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycletView_orders"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/button_delivered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="11dp"
                        android:text="@string/delivered" />

                    <Button
                        android:id="@+id/button_received"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="11dp"
                        android:text="@string/received" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:text="QR код" />


        </LinearLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>