<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textMaterial_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:hint="@string/login"
            app:boxStrokeColor="@color/colorAccent"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editMaterial_login"
                style="@style/inputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:text="Kur" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textMaterial_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorAccent"
            app:endIconMode="password_toggle"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editMaterial_password"
                style="@style/inputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="1234qW" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_delivered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:text="@string/signin" />

        <Button
            android:id="@+id/button_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:text="Сервер" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6DFFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="11dp"
            android:indeterminate="true" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>